<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/gambaratas"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/kalau" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="114dp"
        android:src="@drawable/logomq"
        android:layout_alignEnd="@id/gambaratas"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/Todo">

    </ImageView>

    <TextView
        android:id="@+id/belajartajwid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/acme"
        android:text="@string/belajar_tajwid"
        android:textColor="#ffffff"
        android:textSize="11pt"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/metode_ngalah"
        android:fontFamily="@font/acme"
        android:layout_below="@id/belajartajwid"
        android:layout_marginStart="40dp"
        android:textSize="11pt"
        >

    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hukummimdannunbertasdid"
        android:text="@string/hukum_mim_dan_nun_bertasdid"

        android:layout_marginTop="5dp"
        android:layout_below="@id/gambaratas">

    </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hukumnunsukundantanwin"
            android:text="@string/hukum_nun_sukun_dan_tanwin"
            android:layout_below="@id/hukummimdannunbertasdid">

        </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hukum_mim_sukun"
                android:id="@+id/hukummimsukun"
                android:layout_below="@id/hukumnunsukundantanwin">
            </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idghom"
        android:layout_below="@id/hukummimsukun"
        android:text="@string/idghom"
        >

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ikhfajadid"
        android:text="@string/ikhfa_jadid"
        android:layout_below="@id/idghom"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hukum_lam_ta_rif"
        android:id="@+id/hukumlamtarif"
        android:layout_below="@id/ikhfajadid"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hukum_lam_jalalah"
        android:id="@+id/hukumlamjalalah"
        android:layout_below="@id/hukumlamtarif"
        >

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hukum_ro"
        android:id="@+id/hukumro"
        android:layout_below="@id/hukumlamjalalah"
        >

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qolqolah"
        android:id="@+id/qolqolah"
        android:layout_below="@id/hukumro"
        >

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hukum_mad"
        android:id="@+id/hukummad"
        android:layout_below="@id/qolqolah"
        >

    </Button>



</RelativeLayout>